修复横蛇相关的连接问题