@@ -34,6 +34,41 @@ public abstract class Note implements Serializable, Comparable<Note> {
      * 根据按键所在 timing 的 bpm 计算的判定块间隔.
      */
     float beatTime;
+    /**
+     * 按下、移动的操作集合.
+     */
+    @Getter(AccessLevel.NONE)
+    @Setter(AccessLevel.NONE)
+    private List<Action> actionDownList = null;
+    /**
+     * 抬起的操作.
+     */
+    @Getter(AccessLevel.NONE)
+    @Setter(AccessLevel.NONE)
+    private Action actionUp = null;
+
+    /**
+     * 合并两个 Note 的操作.
+     * <p>
+     * 有两种合并规则：
+     * <ul>
+     *     <li>直接合并，例如 长条/蛇 + 蛇</li>
+     *     <li>有优先级的合并，例如 单点/天键 + 蛇</li>
+     * </ul>
+     * 注意，mergeNotes(a, b, manager) 与 mergeNotes(b, a, manager) 不等价，
+     * 所以需要在调用前确保合并是必要的，且参数顺序正确。
+     *
+     * @param a       要合并操作的 Note
+     * @param b       要合并操作的 Note
+     * @param manager 管理作的实例对象
+     */
+    public static void mergeNotes(Note a, Note b, UnionFind<Action> manager) {
+        // 这里必须先把两个Action建立起联系，再移除不需要的Action
+        // 否则，可能出现b.actionDownList刚好只有一个Action而导致b.actionDownList为空从而无法连接的情况
+        manager.merge(a.getFirstAction(), b.getFirstAction());
+        a.actionUp = null;
+        b.actionDownList.removeIf(o -> o.t() <= a.actionDownList.getFirst().t());
+    }
 
     /**
      * 返回该键型对应的总 note 数.
@@ -53,28 +88,13 @@ public abstract class Note implements Serializable, Comparable<Note> {
     public abstract double[] getAffPoint(int time);
 
     /**
-     * 按下、移动的操作集合.
-     */
-    @Getter(AccessLevel.NONE)
-    @Setter(AccessLevel.NONE)
-    private List<Action> actionDownList = null;
-
-    /**
-     * 抬起的操作.
-     */
-    @Getter(AccessLevel.NONE)
-    @Setter(AccessLevel.NONE)
-    private Action actionUp = null;
-
-    /**
      * 初始化该 note 对应的所有操作.
+     * <p>
+     * 特别的，直蛇可以修改 timing 并将 actionDownList 重置为 null，再重新初始化。
      *
      * @param actionUnionFind 管理作的实例对象
      */
     public void initActions(UnionFind<Action> actionUnionFind) {
-        if (actionDownList != null) {
-            return;
-        }
         actionDownList = new ArrayList<>();
         double[] xy;
         if (this instanceof Click || this instanceof ArcTap) {
@@ -86,8 +106,11 @@ public abstract class Note implements Serializable, Comparable<Note> {
                 xy = getAffPoint((int) t);
                 actionDownList.add(new Action(xy[0], xy[1], (int) t));
             }
-        } else if (this instanceof Arc) {
+        } else if (this instanceof Arc arc) {
             if (getNoteCount() == 0) {
+                actionDownList.add(new Action(arc.x1, arc.y1, t1));
+                actionUp = new Action(arc.x2, arc.y2, t2);
+                actionUnionFind.add(getActions());
                 return;
             }
             // 注意时间小于200ms的超短蛇的处理
@@ -117,45 +140,13 @@ public abstract class Note implements Serializable, Comparable<Note> {
         if (actionDownList == null) {
             throw new IllegalStateException("获取前需要初始化！");
         }
-        if (actionDownList.size() > 0) {
-            return actionDownList.get(0);
+        if (!actionDownList.isEmpty()) {
+            return actionDownList.getFirst();
         }
         if (actionUp != null) {
             return actionUp;
         }
         return null;
-    }
-
-    /**
-     * 合并两个 Note 的操作.
-     * <p>
-     * 有两种合并规则：
-     * <ul>
-     *     <li>直接合并，例如 长条/蛇 + 蛇</li>
-     *     <li>有优先级的合并，例如 单点/天键 + 蛇</li>
-     * </ul>
-     * 注意，mergeNotes(a, b, manager) 与 mergeNotes(b, a, manager) 不等价，
-     * 所以需要在调用前确保合并是必要的，且参数顺序正确。
-     *
-     * @param a       要合并操作的 Note
-     * @param b       要合并操作的 Note
-     * @param manager 管理作的实例对象
-     */
-    public static void mergeNotes(Note a, Note b, UnionFind<Action> manager) {
-        a.actionUp = null;
-        b.actionDownList.removeIf(o -> o.t() <= a.actionDownList.get(0).t());
-        manager.merge(a.getFirstAction(), b.getFirstAction());
-        /*if ((a instanceof Click || a instanceof ArcTap) && b instanceof Arc) {
-            a.actionUp = null;
-            b.actionDownList.removeIf(o -> o.t() <= a.actionDownList.get(0).t());
-            manager.merge(a.getFirstAction(), b.getFirstAction());
-        } else if ((a instanceof Hold || a instanceof Arc) && b instanceof Arc) {
-            a.actionUp = null;
-            b.actionDownList.removeIf(o -> o.t() <= a.actionDownList.get(0).t());
-            manager.merge(a.getFirstAction(), b.getFirstAction());
-        } else {
-            throw new IllegalStateException("未知组合键型混合");
-        }*/
     }
 
     @Override
